--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,10 @@
     <h1>
         Hello World!
     </h1>
+    <p id="a">
+
+    </p>
+    <script src="../src/app.js"></script>
+    <button onclick="test()">Test Button</button>
 </body>
 </html>
