--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Manager</title>
-    <link href="styles.css", type="text/css">
+    <link href="styles.css" type="text/css">
 </head>
 <body>
     <h1>
@@ -14,7 +14,7 @@
     <p id="a">
 
     </p>
-    <script>
+    <script src="getUser.js" type="text/js">
         function abc()
         {
             console.log("Running function");
