Separete js file

--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,8 @@
 
     </p>
     <script src="getUser.js" type="text/js">
-        function abc()
-        {
-            console.log("Running function");
-            document.getElementById("a").innerHTML = "test";
-            console.log("Set Text");
-        }
+        
         </script>
-        <button onclick="abc()">Test Button</button>
+        <button onclick="getUser()">Test Button</button>
 </body>
 </html>
