Removed Bugged Web

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Manager</title>
     <link href="styles.css" type="text/css">
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script src="../src/web.js" type="text/js"></script>
 </head>
 <body>
     <h1>
@@ -14,9 +16,6 @@
     <p id="a">
 
     </p>
-    <script src="getUser.js" type="text/js">
-        
-        </script>
-        <button onclick="getUser()">Test Button</button>
+    <button onclick="test()">Test Button</button>
 </body>
 </html>
